--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<style>
+<!--<style>
     body {
         font-family: "Roboto", sans-serif;
         font-size: 18px;
@@ -14,7 +14,7 @@
     .card {
         box-shadow: 0 16px 48px #E3E7EB;
     }
-</style>
+</style>-->
 
 <header class="masthead">
     <div class="overlay"></div>
@@ -36,7 +36,7 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <h2 class="card-title">{{ post.title }}</h2>
-                    <p class="card-text text-muted h6">{{ post.author }} | {{ post.created_date}} </p>
+                    <p class="card-text text-muted h6">{{ post.author }} | {{ post.published_date}} </p>
                     <p class="card-text">{{post.content|slice:":200" }}</p>
                     <a href="{% url 'post_detail' post.slug  %}" class="btn btn-primary">Read More &rarr;</a>
                 </div>
