created form, fixed spacing

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,21 +1,5 @@
-{% extends "base.html" %}
+{% extends "blog\base.html" %}
 {% block content %}
-<!--<style>
-    body {
-        font-family: "Roboto", sans-serif;
-        font-size: 18px;
-        background-color: #fdfdfd;
-    }
-
-    .head_text {
-        color: white;
-    }
-
-    .card {
-        box-shadow: 0 16px 48px #E3E7EB;
-    }
-</style>-->
-
 <header class="masthead">
     <div class="overlay"></div>
     <div class="container">
@@ -37,7 +21,7 @@
                 <div class="card-body">
                     <h2 class="card-title">{{ post.title }}</h2>
                     <p class="card-text text-muted h6">{{ post.author }} | {{ post.published_date}} </p>
-                    <p class="card-text">{{post.content|slice:":200" }}</p>
+                    <p class="card-text">{{post.content | slice:":200" | linebreaksbr }}</p>
                     <a href="{% url 'post_detail' post.slug  %}" class="btn btn-primary">Read More &rarr;</a>
                 </div>
             </div>
