--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -9,17 +9,12 @@
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-        <!-- <style>
-            body {
-            font-family: "Roboto", sans-serif;
-            font-size: 17px;
-            background-color: #fdfdfd;
-        }
-    </style> -->
-
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light shadow" id="mainNav">
             <div class="container-fluid">
+                <a href="{% url 'post_new' %}" class="top-menu">
+                  {% include './icons/file-earmark-plus.svg' %}
+                </a>
                 <a class="navbar-brand" href="{% url 'home' %}">Joshua Curtis' Blog</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
